REFACT: delete findReply